@@ -1,3 +1,8 @@
+2010-07-13  Roland McGrath  <roland@redhat.com>
+
+	* dwarfcmp.cc (talker): Replace visit method with visitor type.
+	(noisy_compare): Update caller.
+
 2010-06-22  Roland McGrath  <roland@redhat.com>
 
 	* readelf.c (print_debug_line_section): Fix braino in DW_LNS_set_isa.
